2004-01-15  Federico Mena Quintero  <federico@ximian.com>

	* gtkfilesystemgnomevfs.c
	(gtk_file_system_gnome_vfs_get_volume_for_path): Implement.
	(gtk_file_system_gnome_vfs_list_roots): Removed.
	(gtk_file_system_gnome_vfs_get_root_info): Removed.
	(volume_mount_unmount_cb): Oops, emit "volumes-changed", not
	"roots-changed".
	(drive_connect_disconnect_cb): Likewise.
	(struct _GtkFileSystemGnomeVFS): Removed the roots and local_roots
	fields.

2004-01-06  Federico Mena Quintero  <federico@ximian.com>

	* gtkfilesystemgnomevfs.c
	(gtk_file_system_gnome_vfs_create_folder): Use the enum equivalent
	of 0777 as the mode for gnome_vfs_make_directory(); the umask will
	do the right thing.

2003-12-23  Federico Mena Quintero  <federico@ximian.com>

	* gtkfilesystemgnomevfs.c (struct _GtkFileSystemGnomeVFS): Changed
	the icon_theme to be a GtkIconTheme rather than a GnomeIconTheme.
	Added a screen field.
	(gtk_file_system_gnome_vfs_init): Initialize the screen field.
	(ensure_icon_theme): New function, ensures that the icon theme has
	a screen set.
	(gtk_file_system_gnome_vfs_volume_render_icon): Call ensure_icon_theme().
	(gtk_file_system_gnome_vfs_render_icon): Likewise.
	(get_icon_from_name): Use gtk_icon_theme_lookup_icon().

2003-12-22  Federico Mena Quintero  <federico@ximian.com>

	* gtkfilesystemgnomevfs.c: Add Novell copyright.
	(struct _GtkFileSystemGnomeVFS): Added a field for a GnomeVFSVolumeMonitor.
	(gtk_file_system_gnome_vfs_init): Create a volume monitor and
	connect to its signals.
	(gtk_file_system_gnome_vfs_finalize): Unref the volume monitor.
	(volume_mount_unmount_cb): New callback.
	(drive_connect_disconnect_cb): New callback.
	(gtk_file_system_gnome_vfs_list_volumes): Implement.
	(gtk_file_system_gnome_vfs_volume_free): Implement.
	(gtk_file_system_gnome_vfs_volume_get_base_path): Implement.
	(gtk_file_system_gnome_vfs_volume_get_is_mounted): Implement.
	(gtk_file_system_gnome_vfs_volume_mount): Implement.